Revision history for Perl extension GraphViz2::Marpa.

1.04  Tue Sep 25 13:55:00 2012
	- Design change. In the output streams from both the lexer and the parser, the 3 special tokens whose names
		are edge, graph and node, were given the type node_id. Unfortunately, this is confusing because any
		normal edge, graph or node was also given that type. Now, these 3 cases are of type class_id.
		This makes it easier for code processing these output streams to distinguish between special cases
		and common-or-garden tokens. It should have always been done this way, and specifically simplifies code
		in GraphViz2::Marpa::TreeUtils.
	- Change Marpa.pm to support the new distro GraphViz2::Marpa::TreeUtils, which is a sub-class of GraphViz2::Marpa.
		Specifically, the lexer and the parser are stored in mutators, so they can be called from sub-classes.
	- This means any shell scripts using -l now need -lexed_file, and if using -p now need -parsed_file.
	- This in turns means patches to various scripts (scripts/*.sh and scripts/*.pl).
	- The opportunity was taken to spell out all command line option names in shell scripts.
	- Lastly, all data/*.dot files were renamed to data/*.gv, in line with Graphviz itself.

1.03  Mon Sep  3 09:28:00 2012
	- Remove unused dependency Module::UseFrom.
	- Fix disastrous bug in the parser. Test with data/90.Petersen.dot.
	- Add README.
	- Rename scripts/generate.demo.pl to scripts/generate.index.pl, since it does not run all demos,
		it just creates html/index.html.
	- Add FAQ item in GraphViz2::Marpa about how to re-create demo files.

1.02  Fri Jun 22 11:50:00 2012
	- Patch the regexp in the DFA used to recognize HTML-style labels. It's smarter now.
	- Patch the default renderer to not add double-quote delimiters when outputting HTML-style labels.
		These patches require files (30, 31, 32, 33, 34, 35, 38).dot to be edited.
		And they require files (30, 31, 32, 33, 34, 35, 38).(lex, parse, rend) to be re-generated.