@@ -6,6 +6,7 @@ Changelog.Parser=Config::IniFiles V 2.68
 [V 1.04]
 Date=2012-09-25T13:55:00
 Comments= <<EOT
+- All data/*.dot files were renamed to data/*.gv, in line with Graphviz itself.
 - Design change. In the output streams from both the lexer and the parser, the 3 special tokens whose names
 are edge, graph and node, were given the type node_id. Unfortunately, this is confusing because any
 normal edge, graph or node was also given that type. Now, these 3 cases are of type class_id.
@@ -17,7 +18,7 @@ Specifically, the lexer and the parser are stored in mutators, so they can be ca
 - This means any shell scripts using -l now need -lexed_file, and if using -p now need -parsed_file.
 - This in turns means patches to various scripts (scripts/*.sh and scripts/*.pl).
 - The opportunity was taken to spell out all command line option names in shell scripts.
-- Lastly, all data/*.dot files were renamed to data/*.gv, in line with Graphviz itself.
+- Update POD to reflect these changes.
 EOT
 
 [V 1.03]
