@@ -1,6 +1,7 @@
 Revision history for Perl extension GraphViz2::Marpa.
 
 1.04  Tue Sep 25 13:55:00 2012
+	- All data/*.dot files were renamed to data/*.gv, in line with Graphviz itself.
 	- Design change. In the output streams from both the lexer and the parser, the 3 special tokens whose names
 		are edge, graph and node, were given the type node_id. Unfortunately, this is confusing because any
 		normal edge, graph or node was also given that type. Now, these 3 cases are of type class_id.
@@ -12,7 +13,7 @@ Revision history for Perl extension GraphViz2::Marpa.
 	- This means any shell scripts using -l now need -lexed_file, and if using -p now need -parsed_file.
 	- This in turns means patches to various scripts (scripts/*.sh and scripts/*.pl).
 	- The opportunity was taken to spell out all command line option names in shell scripts.
-	- Lastly, all data/*.dot files were renamed to data/*.gv, in line with Graphviz itself.
+	- Update POD to reflect these changes.
 
 1.03  Mon Sep  3 09:28:00 2012
 	- Remove unused dependency Module::UseFrom.
